# 3DCS

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EMBEDDINGS.md  PERFORMANCE_OPTIMIZATION.md  USAGE.md
examples/: demo.py  run_chirality_from_hf.py  run_rotation_from_hf.py  run_traj_from_hf.py
examples/fixtures/: chirality_gemnet_demo.npz  traj_gemnet_rmd17_aspirin.npz  traj_gemnet_rmd17_ethanol.npz
src/three_dbench/: __init__.py  __main__.py
src/three_dbench/benchmarks/: __init__.py  chirality.py  rotation.py  trajectory.py
src/three_dbench/chirality/: __init__.py  evaluation.py
src/three_dbench/common/: metrics.py
src/three_dbench/datasets/: __init__.py  chirality.py  rotation.py  serialization.py  traj.py
src/three_dbench/embeddings/: __init__.py  io.py
src/three_dbench/evaluation/: __init__.py
src/three_dbench/rotation/: __init__.py  evaluation.py
src/three_dbench/traj/: __init__.py  evaluation.py
src/three_dbench/utils/: paths.py
tests/: conftest.py  test_basic.py  test_chirality_evaluation.py  test_cli.py  test_demo.py  test_embeddings_io.py  test_metrics.py  test_serialization.py
